--- a/docs/authentication/configuration/session-options.mdx
+++ b/docs/authentication/configuration/session-options.mdx
@@ -21,7 +21,7 @@ Fortunately, with Clerk you have to ability to fully control the lifetime of you
 
 ### Inactivity timeout
 
-Denotes the duration after which a session will expire and the user will have to sign in again, if they haven't been active on your site. By default, this setting is disabled for all newly created instances. To enable it and set your desired value, click on the <DashboardLink path="sessions">Sessions</DashboardLink> page in the side nav of the Clerk Dashboard.
+Denotes the duration after which a session will expire and the user will have to sign in again, if they haven't been active on your site. By default, this setting is disabled for all newly created instances. To enable it and set your desired value, in the Clerk Dashboard, go to **[Sessions](https://dashboard.clerk.com/last-active?path=sessions)**.
 
 <Images 
 width={3024}
@@ -32,7 +32,7 @@ alt="The 'Sessions' configuration section in the Clerk Dashboard with a red outl
 
 ### Maximum lifetime
 
-Denotes the duration after which a session will expire and the user will have to sign in again, regardless of their activity on your site. By default, this setting is enabled with a default value of 7 days for all newly created instances. To find this setting and change the value, click on the <DashboardLink path="sessions">Sessions</DashboardLink> page in the side nav of the Clerk Dashboard.
+Denotes the duration after which a session will expire and the user will have to sign in again, regardless of their activity on your site. By default, this setting is enabled with a default value of 7 days for all newly created instances. To find this setting and change the value, in the Clerk Dashboard, go to **[Sessions](https://dashboard.clerk.com/last-active?path=sessions)**.
 
 <Images 
 width={3024}
@@ -45,7 +45,7 @@ alt="The 'Sessions' settings in the Clerk Dashboard with a red outline around th
 
 Multi-session applications allow users to be signed into more than one account at a time from the same browser. Users may switch the active account by opening the [`<UserButton />`](/docs/components/user/user-button) and selecting the desired account.
 
-To enable this feature in your application, click on the <DashboardLink path="sessions">Sessions</DashboardLink> page in the side nav of the Clerk Dashboard. Turn on the **Mutli-session handling** toggle.
+To enable this feature in your application, in the Clerk Dashboard, go to **[Sessions](https://dashboard.clerk.com/last-active?path=sessions)**. Turn on the **Mutli-session handling** toggle.
 
 <Images 
 width={3024}
@@ -60,7 +60,7 @@ Learn more about working with multi-session applications with Clerk components a
 
 Session tokens are JWTs that contain a set of standard claims required by Clerk, but there are times when you want to augment these tokens by providing additional claims of your own.
 
-To add custom claims to the session token, click on the <DashboardLink path="sessions">Sessions</DashboardLink> page in the side nav of the Clerk Dashboard. In the **Customize session token** section, click on the **Edit** button. This will open a modal window where you can add claims and even use our handy shortcodes.
+To add custom claims to the session token, in the Clerk Dashboard, go to **[Sessions](https://dashboard.clerk.com/last-active?path=sessions)**. In the **Customize session token** section, click on the **Edit** button. This will open a modal window where you can add claims and even use our handy shortcodes.
 
 <Images 
 width={3024}
