--- a/docs/authentication/configuration/sign-up-options.mdx
+++ b/docs/authentication/configuration/sign-up-options.mdx
@@ -52,7 +52,7 @@ Clerk provides [Web3 authentication](/docs/users/web3) as an option with MetaMas
 
 ## Set up multifactor authentication
 
-Although not available as an option in the initial new application screen, you can opt to turn on multifactor authentication (MFA) from the configuration screen. Click on <DashboardLink path="user-authentication/multi-factor">Multi-factor</DashboardLink> in the side nav of the Clerk Dashboard. For more information on how to set up multifactor authentication, check out our [detailed guide](/docs/custom-flows/mfa#overview).
+Although not available as an option in the initial new application screen, you can opt to turn on multifactor authentication (MFA) from the configuration screen. In the Clerk Dashboard, go to **User & Authentication > [Multifactor](https://dashboard.clerk.com/last-active?path=user-authentication/multi-factor)** and toggle on the multi-factor options you would like to enable. For more information on how to set up multifactor authentication, check out our [detailed guide](/docs/custom-flows/mfa#overview).
 
 <Images
 width={3024}
