--- a/docs/authentication/saml-at-clerk.mdx
+++ b/docs/authentication/saml-at-clerk.mdx
@@ -11,7 +11,7 @@ Clerk supports Enterprise SSO via the SAML protocol so that you can create authe
 
 - A Clerk application with the [Business](https://clerk.com/pricing) plan.
 {/* TODO: This would be a good place for a Nutshell (Ask Rachel). "To do so..." could go in the nutshell. */}
-- An `email_address` enabled as a strategy. To do so, click on the **User & Authentication** drop down in the side nav of the Clerk Dashboard. Then, click on the <DashboardLink path="user-authentication/email-phone-username">Email, Phone, Username</DashboardLink> page. In the **Contact information** section, enable the **Email address** strategy by toggling on the switch.
+- An `email_address` enabled as a strategy. In the Clerk Dashboard, go to **User & Authentication > [Email, Phone, Username](https://dashboard.clerk.com/last-active?path=user-authentication/email-phone-username)**. In the **Contact information** section, enable the **Email address** strategy by toggling on the switch.
 
 <Images 
   width={3024}
@@ -22,7 +22,7 @@ Clerk supports Enterprise SSO via the SAML protocol so that you can create authe
 
 ## Create a SAML connection
 
-To create a SAML Connection, click on the **User & Authentication** drop down in the Clerk Dashboard. Then, click on the <DashboardLink path="user-authentication/enterprise-connections">Enterprise Connections</DashboardLink> page.
+To create a SAML Connection, in the Clerk Dashboard, go to **User & Authentication > [Enterprise Connections](https://dashboard.clerk.com/last-active?path=user-authentication/enterprise-connections)**.
 
 Click on the **Create connection** button.
 
