--- a/docs/backend-requests/making/custom-session-token.mdx
+++ b/docs/backend-requests/making/custom-session-token.mdx
@@ -19,7 +19,7 @@ They typically contain a standard set of claims that are required for Clerk to f
 
 ### Go to **Sessions** in the Clerk Dashboard
 
-Navigate to the [Sessions](https://dashboard.clerk.com/last-active?path=sessions) page in the Clerk Dashboard.
+In the Clerk Dashboard, navigate to the **[Sessions](https://dashboard.clerk.com/last-active?path=sessions)** page.
 
 <Images
 src="/docs/images/advance/session-tokens/clerk-session.png"
