--- a/docs/custom-flows/email-sms-otp.mdx
+++ b/docs/custom-flows/email-sms-otp.mdx
@@ -28,7 +28,7 @@ The rest of this guide will explain how to set up passwordless authentication us
 
 ## Configuration
 
-Passwordless authentication can be configured through the [Clerk Dashboard](https://dashboard.clerk.com/). Navigate to the [Email, Phone, and Username](https://dashboard.clerk.com/last-active?path=user-authentication/email-phone-username) tab of the **User & Authentication** section in the Clerk Dashboard. In the **Authentication factors** section of this page, choose one of the available passwordless authentication strategies that send one-time codes.
+Passwordless authentication can be configured through the Clerk Dashboard. Go to **User & Authentication > [Email, Phone, and Username](https://dashboard.clerk.com/last-active?path=user-authentication/email-phone-username)**. In the **Authentication factors** section of this page, choose one of the available passwordless authentication strategies that send one-time codes.
 
 <Images 
   width={3024}
