--- a/docs/custom-flows/magic-links.mdx
+++ b/docs/custom-flows/magic-links.mdx
@@ -45,7 +45,7 @@ We take care of the boring stuff, like efficient polling, secure session managem
 
 ## Configuration
 
-Magic link authentication can be configured through the [Clerk Dashboard](https://dashboard.clerk.com/). Navigate to the [Email, Phone, and Username](https://dashboard.clerk.com/last-active?path=user-authentication/email-phone-username) tab of the **User & Authentication** section in the Clerk Dashboard. In the **Authentication factors** section of this page, choose **Email verification link** as the authentication factor.
+Magic link authentication can be configured through the Clerk Dashboard. Go to **User & Authentication > [Email, Phone, and Username](https://dashboard.clerk.com/last-active?path=user-authentication/email-phone-username)**. In the **Authentication factors** section of this page, choose **Email verification link** as the authentication factor.
 
 <Images 
   width={3024}
