--- a/docs/custom-flows/mfa.mdx
+++ b/docs/custom-flows/mfa.mdx
@@ -26,7 +26,7 @@ By enforcing two different types of verifications, you can drastically improve y
 
 ## Configuration
 
-Although not available as an option in the initial new application screen, you can opt to turn on multifactor authentication (MFA) from the [configuration screen](https://dashboard.clerk.com/last-active?path=/user-authentication/multi-factor) in the Clerk Dashboard.
+Although not available as an option in the initial new application screen, you can opt to turn on multifactor authentication (MFA) from the configuration screen in the Clerk Dashboard. Go to **User & Authentication > [Multi-factor](https://dashboard.clerk.com/last-active?path=user-authentication/multi-factor)**.
 
 Clerk currently offers the following MFA strategies:
 
