--- a/docs/custom-flows/multi-session-applications.mdx
+++ b/docs/custom-flows/multi-session-applications.mdx
@@ -35,7 +35,7 @@ There are two main ways to handle all the above: [using Clerk Components](#using
 
 ## Configuration
 
-To enable the multi-session feature in your Clerk instance, navigate to the [Sessions](https://dashboard.clerk.com/last-active?path=sessions) tab in your Clerk Dashboard and toggle on **Multi-session handling**. Don't forget to click **Apply changes**.
+To enable the multi-session feature in your Clerk instance, go to the Clerk Dashboard and navigate to **[Sessions](https://dashboard.clerk.com/last-active?path=sessions)**. Toggle on **Multi-session handling** and don't forget to select **Apply changes**.
 
 <Images
   width={3024}
