--- a/docs/custom-flows/oauth-connections.mdx
+++ b/docs/custom-flows/oauth-connections.mdx
@@ -116,7 +116,7 @@ Clerk ensures that security critical nonces will be passed only to whitelisted U
 
 So for maximum security in your production instances, you need to whitelist your custom redirect URLs via the [Clerk Dashboard](https://dashboard.clerk.com/) or the [Clerk Backend API](https://clerk.com/docs/reference/backend-api/tag/Redirect-URLs).
 
-To whitelist a redirect URL via the Clerk Dashboard, go to the [Social Connections](https://dashboard.clerk.com/last-active?path=user-authentication/social-connections?tab=Settings) tab of the **User & Authentication* section. On the **Social Connections** page, click on the **Settings* tab and add your redirect URL to the **Redirect URLs** list.
+To whitelist a redirect URL via the Clerk Dashboard, go to **User & Authentication > [Social Connections](https://dashboard.clerk.com/last-active?path=user-authentication/social-connections)**. On the **Social Connections** page, click on the **Settings* tab and add your redirect URL to the **Redirect URLs** list.
 
 <Images
   width={3024}
