--- a/docs/custom-flows/saml-connections.mdx
+++ b/docs/custom-flows/saml-connections.mdx
@@ -8,7 +8,7 @@ description: Learn how to leverage the Clerk SDK to build a completely custom SA
 In case our default [SAML flow](/docs/authentication/saml-at-clerk) doesn’t cover your needs, you can leverage the Clerk SDK to build a completely custom SAML flow.
 
 <Callout type="info">
-  You still need to configure your instance through the Clerk Dashboard. You can create a SAML connection by visiting the [Enterprise Connections](https://dashboard.clerk.com/last-active?path=user-authentication/enterprise-connections) page.
+  You still need to configure your instance through the Clerk Dashboard. You can create a SAML connection by visiting the **[Enterprise Connections](https://dashboard.clerk.com/last-active?path=user-authentication/enterprise-connections)** page.
 </Callout>
 
 When using SAML, the sign-in and sign-up are equivalent. A successful SAML flow consists of the following steps:
