--- a/docs/custom-flows/user-impersonation.mdx
+++ b/docs/custom-flows/user-impersonation.mdx
@@ -224,7 +224,7 @@ app.listen(3000, () => {
 
 ## Impersonate a user from the Clerk Dashboard
 
-If you prefer, you can impersonate a user right from the [Users](https://dashboard.clerk.com/last-active?path=users) page in the Clerk Dashboard.
+If you prefer, you can impersonate a user right from the **[Users](https://dashboard.clerk.com/last-active?path=users)** page in the Clerk Dashboard.
 
 <Images
   width={3024}
