--- a/docs/integrations/analytics/google-analytics.mdx
+++ b/docs/integrations/analytics/google-analytics.mdx
@@ -13,7 +13,7 @@ This integration enables Clerk to send user authentication events to the configu
 
 To enable the integration, you will need to provide Clerk with the required Google Analytics configuration attributes depending on the type of Google Analytics property. **We support both Universal Analytics and Google Analytics 4 properties.**
 
-To get started, navigate to the [Integrations](https://dashboard.clerk.com/last-active?path=integrations) page in the Clerk Dashboard and turn on the Google Analytics integration.
+To get started, go to the Clerk Dashboard and navigate to the **[Integrations](https://dashboard.clerk.com/last-active?path=integrations)** page. Turn on the Google Analytics integration.
 
 <Images
   width={3024}
