--- a/docs/integrations/databases/firebase.mdx
+++ b/docs/integrations/databases/firebase.mdx
@@ -7,7 +7,7 @@ description: Learn how to integrate Clerk into your Firebase application.
 
 To enable Firebase integration with your Clerk application, you will need to provide Clerk with the required Firebase configuration attributes depending on the Firebase features you would require authenticated user access to.
 
-To get started, navigate to the [Integrations](https://dashboard.clerk.com/last-active?path=integrations) page in the Clerk Dashboard and turn on the Firebase integration.
+To get started, go to the Clerk Dashboard and navigate to the **[Integrations](https://dashboard.clerk.com/last-active?path=integrations)** page. Turn on the Firebase integration.
 
 <Images
   width={3024}
