--- a/docs/integrations/databases/supabase.mdx
+++ b/docs/integrations/databases/supabase.mdx
@@ -7,7 +7,7 @@ description: Learn how to integrate Clerk into your Supabase application.
 
 The first step is to create a new Clerk application from your Clerk Dashboard if you haven’t done so already. You can choose whichever authentication strategy and social login providers you prefer. For more information, check out our [Set up your application](/docs/quickstarts/setup-clerk) guide.
 
-After your Clerk application has been created, navigate to the [JWT Templates](https://dashboard.clerk.com/last-active?path=jwt-templates) screen from the Clerk Dashboard. Click on the **New template** button to create a new template based on Supabase.
+After your Clerk application has been created, go to the Clerk Dashboard and navigate to the **[JWT Templates](https://dashboard.clerk.com/last-active?path=jwt-templates)** page. Click on the **New template** button to create a new template based on Supabase.
 
 <Images 
   width={3024}
@@ -62,7 +62,7 @@ NEXT_PUBLIC_SUPABASE_URL=your-supabase-url
 NEXT_PUBLIC_SUPABASE_KEY=your-supabase-anon-key
 ```
 
-You can find your Frontend API value by navigating to the [API keys](https://dashboard.clerk.com/last-active?path=api-keys) page in the Clerk Dashboard and copying your **Publishable key**.
+You can find your Frontend API value in the Clerk Dashboard on the **[API keys](https://dashboard.clerk.com/last-active?path=api-keys)** page. It will be the **Publishable key**.
 
 <Images
   width={3024}
