--- a/docs/organizations/verified-domains.mdx
+++ b/docs/organizations/verified-domains.mdx
@@ -5,7 +5,7 @@ description: Learn about how to use verified domains for organizations.
 
 # Creating and verifying a domain
 
-Domains can be added and verified under an organization by an administrator. In order to enable this feature, make sure to enable verified domains in the **Verified domains** section of the [Organizations Settings](https://dashboard.clerk.com/last-active?path=organizations-settings) in the Clerk Dashboard. The only parameter needed to to create an organization domain is the `name`.
+Domains can be added and verified under an organization by an administrator. In order to enable this feature, go to the Clerk Dashboard and navigate to the **[Organizations Settings](https://dashboard.clerk.com/last-active?path=organizations-settings)** page. Toggle on **Verified domains**. The only parameter needed to create an organization domain is the `name`.
 
 Domains can be verified through an email verfication code sent to an email that matches the domain. If the administrator adding the domain already has a verified email using that domain in their account, the domain will be automatically verified.
 
