--- a/docs/quickstarts/javascript.mdx
+++ b/docs/quickstarts/javascript.mdx
@@ -3,13 +3,6 @@ title: Use Clerk with JavaScript
 description: Learn how to use Clerk to quickly and easily add secure authentication and user management to your JavaScript application.
 ---
 
-import {Steps} from "nextra-theme-docs";
-import { Callout } from "nextra-theme-docs";
-import { YouTube } from "@/components/Youtube";
-import { Images } from "@/components/Images";
-import {Cards} from "@/components/Cards";
-import { CodeBlockTabs } from "@/components/CodeBlockTabs";
-
 # Use Clerk with JavaScript
 
 Learn how to use Clerk to quickly and easily add secure authentication and user management to your JavaScript application.
@@ -61,7 +54,7 @@ At the root of your project, install the ClerkJS package using your package mana
 
 ### Set environment keys
 
-To use the ClerkJS package, you'll need to copy your **Publishable Key** from the [API Keys](https://dashboard.clerk.com/last-active?path=api-keys) page in the Clerk Dashboard. On this same page, click on the **Advanced** dropdown and copy your **Frontend API URL**. If you are signed into your Clerk Dashboard, your **Publishable key** should be visible.
+To use the ClerkJS package, you'll need your **Publishable Key** and your **Frontend API URL**. If you are signed into your Clerk Dashboard, your **Publishable key** should be visible below. However, both of these values can be found in the Clerk Dashboard on the **[API Keys](https://dashboard.clerk.com/last-active?path=api-keys)** page. On this page, click on the **Advanced** dropdown to find your **Frontend API URL**. 
 
 <InjectKeys>
 
