--- a/docs/quickstarts/setup-clerk.mdx
+++ b/docs/quickstarts/setup-clerk.mdx
@@ -45,7 +45,7 @@ To create a new app, press the **Add application** card to be taken to the inter
 
 Clerk provides [over 20 authentication providers](/docs/authentication/social-connections/overview) that you can use in your Clerk apps. Select the ones that matter to your users and press **Create application.**
 
-Once the application is created in the Clerk dashboard, you will be redirected to the <DashboardLink path="api-keys">API Keys</DashboardLink> page, which will show you your application's API keys.
+Once the application is created in the Clerk dashboard, you will be redirected to the **[API Keys](https://dashboard.clerk.com/last-active?path=api-keys)** page, which will show you your application's API keys.
 
 {/* Don't move ![] to a new line, otherwise MDX adds a <p> tag and it breaks A11Y */}
 
