--- a/docs/references/javascript/overview.mdx
+++ b/docs/references/javascript/overview.mdx
@@ -49,7 +49,7 @@ await clerk.load({
 
 ### Install ClerkJS as script
 
-ClerkJS can be loaded from a `<script />` tag with the source from your **Frontend API URL**. You can find your **Frontend API URL** on the [API Keys](https://dashboard.clerk.com/last-active?path=api-keys) page in the Clerk Dashboard. Click on the **Advanced** dropdown to reveal the **Frontend API URL**.
+ClerkJS can be loaded from a `<script />` tag with the source from your **Frontend API URL**. You can find your **Frontend API URL** in the Clerk Dashboard on the **[API Keys](https://dashboard.clerk.com/last-active?path=api-keys)** page. Click on the **Advanced** dropdown to reveal the **Frontend API URL**.
 
 Add the following script to your site's `<body>` element:
 
