--- a/docs/references/ruby/overview.mdx
+++ b/docs/references/ruby/overview.mdx
@@ -37,7 +37,7 @@ $ gem install clerk-sdk-ruby
 
 To access all [Backend API endpoints](https://clerk.com/docs/reference/backend-api), you need to instantiate a `Clerk::SDK` instance.
 
-You will need your Clerk secret key to instantiate an instance. Navigate to the [API Keys](https://dashboard.clerk.com/last-active?path=api-keys) page of the Clerk Dashboard and copy your secret key.
+You will need your Clerk secret key to instantiate an instance. Go to the Clerk Dashboard and navigate to the **[API Keys](https://dashboard.clerk.com/last-active?path=api-keys)** page and copy your secret key.
 
 This examples shows how to instantiate an instance of `Clerk::SDK` with your secret key and then send your first user a welcome email.
 
