--- a/docs/users/sync-data.mdx
+++ b/docs/users/sync-data.mdx
@@ -23,7 +23,7 @@ Given the asynchronous nature of webhooks, they might not fit in every use case 
 
 ### Enable webhooks
 
-To enable webhooks, go to the [Webhooks](https://dashboard.clerk.com/last-active?path=webhooks) page in the Clerk dashboard and click on the **Add Endpoint** button.
+To enable webhooks, go to the Clerk Dashboard and navigate to the **[Webhooks](https://dashboard.clerk.com/last-active?path=webhooks)** page. Select the **Add Endpoint** button.
 
 ![Add endpoint](/docs/images/users/guides/sync-backend/enable-webhook.png)
 
@@ -82,7 +82,7 @@ pnpm add svix
 
 </CodeBlockTabs>
 
-Next you will want to retrieve the Webhook signing secret from the Clerk Dashboard. You can find this in the [Webhooks](https://dashboard.clerk.com/last-active?path=webhooks) section of the Clerk Dashboard. You will need to set this as an environment variable in your Next.js project.
+Next, you will want to retrieve the Webhook signing secret. You can find this in the Clerk Dashboard on the **[Webhooks](https://dashboard.clerk.com/last-active?path=webhooks)** page. You will need to set this as an environment variable in your Next.js project.
 
 ![signing-secret-example](/docs/images/users/guides/sync-backend/sign-secret.png)
 
@@ -149,7 +149,7 @@ pnpm add svix
 
 </CodeBlockTabs>
 
-Next you will want to retrieve the Webhook signing secret from the Clerk Dashboard. You can find this in the [Webhooks](https://dashboard.clerk.com/last-active?path=webhooks) section of the Clerk Dashboard. You will need to set this as an environment variable in your Next.js project.
+Next, you will want to retrieve the Webhook signing secret. You can find this in the Clerk Dashboard on the **[Webhooks](https://dashboard.clerk.com/last-active?path=webhooks)** page. You will need to set this as an environment variable in your Next.js project.
 
 ![signing-secret-example](/docs/images/users/guides/sync-backend/sign-secret.png)
 
@@ -235,7 +235,7 @@ pnpm add svix
 
 </CodeBlockTabs>
 
-Next you will want to retrieve the Webhook signing secret from the Clerk Dashboard. You can find this in the [Webhooks](https://dashboard.clerk.com/last-active?path=webhooks) section of the Clerk Dashboard. You will need to set this as an environment variable in your Node project.
+Next, you will want to retrieve the Webhook signing secret. You can find this in the Clerk Dashboard on the **[Webhooks](https://dashboard.clerk.com/last-active?path=webhooks)** page. You will need to set this as an environment variable in your Node project.
 
 ![signing-secret-example](/docs/images/users/guides/sync-backend/sign-secret.png)
 
@@ -274,6 +274,6 @@ router.post('/webhook', bodyParser.raw({type: 'application/json'}), async functi
 
 To test a webhook locally, you can use a tool like [ngrok](https://ngrok.com/) to expose your local server to the internet. You can then use the ngrok URL as the webhook URL in the Clerk Dashboard.
 
-If you are testing webhooks outside of your development, you can use our webhook test requests to test your webhook. You can find these in the [Webhooks](https://dashboard.clerk.com/last-active?path=webhooks) section of the Clerk Dashboard.
+If you are testing webhooks outside of your development, you can use our webhook test requests to test your webhook. You can find these in the Clerk Dashboard on the **[Webhooks](https://dashboard.clerk.com/last-active?path=webhooks)** page.
 
 </Steps>
