--- a/docs/account-portal/direct-links.mdx
+++ b/docs/account-portal/direct-links.mdx
@@ -29,7 +29,7 @@ In the case that a user does visit an Account Portal page directly without the q
 
 ### Set your static fallback host
 
-To set your fallback host, click on the <DashboardLink path="paths">Paths</DashboardLink> page in the side nav of the Clerk Dashboard.
+To set your fallback host, in the Clerk Dashboard, go to the **[Paths](https://dashboard.clerk.com/last-active?path=paths)** page.
 
 For development, set your static fallback localhost with the port that you use (e.g. `http://localhost:3000`). Clerk will use this fallback host if a dev browser fails to be retrieved for your client. 
 
@@ -44,7 +44,7 @@ In production, the default is your application homepage.
   
 ### Configure fallback redirects
 
-Specify the fallback redirects under the **Redirects** tab on the [Account Portal](https://dashboard.clerk.com/last-active?path=account-portal) page in the Clerk Dashboard.
+To specify the fallback redirects, in the Clerk Dashboard, go to the **[Account Portal](https://dashboard.clerk.com/last-active?path=account-portal)** page and open the **Redirects** tab.
 
 <Images 
   width={3248}
