--- a/docs/advanced-usage/satellite-domains.mdx
+++ b/docs/advanced-usage/satellite-domains.mdx
@@ -34,7 +34,7 @@ When building your sign-in flow, you must configure it to run within your primar
 
 ### Add your first satellite domain
 
-Click on the <DashboardLink path="domains">Domains</DashboardLink> page in the side nav of the Clerk dashboard and then, click on the **Satellite** tab. Click on the **Add satellite domain** button to add a new satellite domain of your choice. Then, follow the instructions provided.
+In the Clerk Dashboard, go to the **[Domains](https://dashboard.clerk.com/last-active?path=domains)** page and then open the **Satellite** tab. Click on the **Add satellite domain** button to add a new satellite domain of your choice. Then, follow the instructions provided.
 
 For the purposes of this guide, the satellite domain will be "satellite.dev".
 
