--- a/docs/authentication/social-connections/coinbase.mdx
+++ b/docs/authentication/social-connections/coinbase.mdx
@@ -35,7 +35,7 @@ You need to set all the required fields and the corresponding **Permitted Redire
   alt="Creating application"
 />
 
-Go to the [Social Connections page](https://dashboard.clerk.com/last-active?path=authentication/social) in your Clerk Dashboard and enable Coinbase. In the modal that opened, ensure **Use custom credentials** is enabled and copy **Authorized redirect URI**. Make sure the value matches the **Redirect URIs**, as shown below.
+In the Clerk Dashboard, go to **User & Authentication > [Social Connections](https://dashboard.clerk.com/last-active?path=user-authentication/social-connections)** and enable Coinbase. In the modal that opened, ensure **Use custom credentials** is enabled and copy **Authorized redirect URI**. Make sure the value matches the **Redirect URIs**, as shown below.
 
 <Images
   width={1303}
