--- a/docs/authentication/social-connections/google.mdx
+++ b/docs/authentication/social-connections/google.mdx
@@ -24,7 +24,7 @@ For production instances, you will need to create your own developer account wit
 
 ## Configuring Google social connection
 
-First, go to the [Social Connections page](https://dashboard.clerk.com/last-active?path=authentication/social) of your Clerk dashboard. From the list of OAuth vendors, enable Google. In the modal that opened, make sure **Use custom credentials** is enabled, and copy the value of the **Authorized redirect URI** field (you will have to paste this in the Google Console in a bit). Leave that window open as you will need to fill in the Client ID and Client Secret values that you will retrieve from the Google Cloud Platform console.
+First, in the Clerk Dashboard, go to **User & Authentication > [Social Connections](https://dashboard.clerk.com/last-active?path=user-authentication/social-connections)**. From the list of OAuth vendors, toggle on the Google option. In the modal that opened, make sure **Use custom credentials** is enabled, and copy the value of the **Authorized redirect URI** field (you will have to paste this in the Google Console in a bit). Leave that window open as you will need to fill in the Client ID and Client Secret values that you will retrieve from the Google Cloud Platform console.
 
 In a new window, go to your Google Cloud Platform console. Select your Google project (step 1 in the screenshot) and enable OAuth 2.0 support by following the official instructions on [how to set up up an OAuth 2.0 application](https://support.google.com/cloud/answer/6158849?hl=en). In the **Authorized redirect URIs** setting, paste the value you copied from Clerk's Dashboard (see previous paragraph).
 
