--- a/docs/authentication/social-connections/hubspot.mdx
+++ b/docs/authentication/social-connections/hubspot.mdx
@@ -30,7 +30,7 @@ Once your app is created, click on the **Auth** tab and copy the **App Id** and 
 
 ![Configuring a HubSpot app](/docs/images/authentication-providers/hubspot/02d8bf249b4a6debe85e66ea53b5f88817acdba0-1489x995.png)
 
-Go to the [Social Connections page](https://dashboard.clerk.com/last-active?path=authentication/social) of your Clerk Dashboard and enable HubSpot. In the modal that opened, ensure **Use custom credentials** is enabled and paste the values you obtained during the previous step.
+In the Clerk Dashboard, go to **User & Authentication > [Social Connections](https://dashboard.clerk.com/last-active?path=user-authentication/social-connections)** and enable HubSpot. In the modal that opened, ensure **Use custom credentials** is enabled and paste the values you obtained during the previous step.
 
 Before you close the modal, copy the **Authorized redirect URI**. Go back to the HubSpot panel and paste it into the **Redirect URL** field and click **Save**.
 
