--- a/docs/authentication/social-connections/linear.mdx
+++ b/docs/authentication/social-connections/linear.mdx
@@ -26,7 +26,7 @@ For production instances, you will need to generate your own Client ID and Clien
 
 First, you need to create a new OAuth Linear app. Navigate on your **Settings > Account > API > OAuth applications** and click on **Create new**. On the modal that pops up, enter all the necessary info for your new app such as the name, the logo etc. 
 
-For the Callback URLs field, go to the [Social Connections page](https://dashboard.clerk.com/last-active?path=authentication/social) in your Clerk Dashboard and enable Linear. In the modal that opened, ensure **Use custom credentials** is enabled and copy **Authorized redirect URI**. Paste this value in the Callback URLs field of your Linear application.
+To fill the Callback URLs field, you need the **Authorized redirect URI** from Clerk. In the Clerk Dashboard, go to **User & Authentication > [Social Connections](https://dashboard.clerk.com/last-active?path=user-authentication/social-connections)** and enable Linear. In the modal that opened, ensure **Use custom credentials** is enabled and copy **Authorized redirect URI**. Paste this value in the Callback URLs field of your Linear application.
 
 <Images
   width={1399}
