--- a/docs/authentication/social-connections/linkedin-oidc.mdx
+++ b/docs/authentication/social-connections/linkedin-oidc.mdx
@@ -45,7 +45,7 @@ Once redirected to the application creation form, you need to set a name, associ
 
 You need to enable LinkedIn as a social connection for your Clerk application.
 
-Navigate to the [Social Connections page](https://dashboard.clerk.dev/last-active?path=user-authentication/social-connections) in your Clerk Dashboard. Toggle on the LinkedIn option.
+In the Clerk Dashboard, go to **User & Authentication > [Social Connections](https://dashboard.clerk.com/last-active?path=user-authentication/social-connections)**. From the list of OAuth vendors, toggle on the LinkedIn option.
 
 <Images
   width={3024}
@@ -72,7 +72,7 @@ Paste the **Redirect URL** value you copied from the Clerk Dashboard into the **
 Above that section, copy the **Client ID** and **Client Secret** from the **Application credentials** section. Go back to the Clerk Dashboard, where the modal should still be open, and paste these values into the respective fields. 
 
 <Callout type="info">
-  If the modal or page is not still open, navigate to the [Social Connections](https://dashboard.clerk.dev/last-active?path=user-authentication/social-connections) page in the Clerk Dashboard and click on the settings cog icon next to the LinkedIn option. You can now paste the **Client ID** and **Client Secret** into their respective fields.
+  If the modal or page is not still open, go to the Clerk Dashboard and navigate to **User & Authentication > [Social Connections](https://dashboard.clerk.com/last-active?path=user-authentication/social-connections)**. Click on the settings cog icon next to the LinkedIn option. You can now paste the **Client ID** and **Client Secret** into their respective fields.
 </Callout>
 
 <Images
