--- a/docs/authentication/social-connections/twitter.mdx
+++ b/docs/authentication/social-connections/twitter.mdx
@@ -30,7 +30,7 @@ To do so, go to "[Projects & Apps](https://developer.twitter.com/en/portal/proje
 
 > You will need your application to be approved for elevated status to be able to use it with Clerk. You can apply for the status in [Twitter developer dashboard](https://developer.twitter.com/en/portal/products/elevated)
 
-Go to the [Social Connections page](https://dashboard.clerk.com/last-active?path=authentication/social) in your Clerk Dashbord and enable Twitter. In the modal that opened, ensure **Use custom credentials** is enabled and paste the **API Key** and **API Secret** values which you copied in the previous step. Then, copy the **Authorized redirect URI**.
+In the Clerk Dashboard, go to **User & Authentication > [Social Connections](https://dashboard.clerk.com/last-active?path=user-authentication/social-connections)** and enable Twitter. In the modal that opened, ensure **Use custom credentials** is enabled and paste the **API Key** and **API Secret** values which you copied in the previous step. Then, copy the **Authorized redirect URI**.
 
 Navigate to your application settings screen and scroll down to the **User authentication settings** section and click **Set up**.
 
