--- a/docs/backend-requests/handling/manual-jwt.mdx
+++ b/docs/backend-requests/handling/manual-jwt.mdx
@@ -21,7 +21,7 @@ There are two ways to obtain your public key:
 
 1. Using the Backend API in JSON Web Key Set (JWKS) format at the following endpoint [https://api.clerk.dev/v1/jwks](https://clerk.com/docs/reference/backend-api/tag/JWKS#operation/GetJWKS).
 
-2. Using the Frontend API in JSON Web Key Set (JWKS) format at the following endpoint `https://<YOUR_FRONTEND_API>/.well-known/jwks.json`. This can be obtained from the [API Keys](https://dashboard.clerk.com/last-active?path=api-keys) section of the Clerk Dashboard. Scroll down and click on **Advanced** and in the **JWT public key** section, copy the **JWKS URL**.
+2. Using the Frontend API in JSON Web Key Set (JWKS) format at the following endpoint `https://<YOUR_FRONTEND_API>/.well-known/jwks.json`. This can be obtained from the Clerk Dashboard on the [API Keys](https://dashboard.clerk.com/last-active?path=api-keys) page. Scroll down and click on **Advanced** and in the **JWT public key** section, copy the **JWKS URL**.
 
 <Images
 src="/docs/images/backend-requests/jwt-public-key.jpg"
@@ -30,7 +30,7 @@ height={1650}
 alt="The 'API Keys' page in the Clerk Dashboard. There is a red box around the 'JWT public key' section, with a red arrow pointing to the 'JWKS URL' tab of the code example."
 />
 
-3. Using the PEM public key provided in the [API Keys](https://dashboard.clerk.com/last-active?path=api-keys) section of the Clerk Dashboard. Scroll down and click on **Advanced** and in the **JWT public key** section, copy the **PEM public key**. This option should only be used as a fallback for when the first two options are not available.
+3. Using the PEM public key provided in the Clerk Dashboard on the [API Keys](https://dashboard.clerk.com/last-active?path=api-keys) page. Scroll down and click on **Advanced** and in the **JWT public key** section, copy the **PEM public key**. This option should only be used as a fallback for when the first two options are not available.
 
 ### Verify the token signature
 
