--- a/docs/backend-requests/making/jwt-templates.mdx
+++ b/docs/backend-requests/making/jwt-templates.mdx
@@ -15,7 +15,7 @@ With JWT Templates, you can control the claims that will go into these tokens by
 
 At a glance, the process for creating and using a template is the following:
 
-- Create a JWT template from the [Clerk Dashboard](https://dashboard.clerk.com/last-active?path=jwt-templates).
+- In the Clerk Dashboard, create a JWT template from the **[JWT Templates](https://dashboard.clerk.com/last-active?path=jwt-templates)** page.
 - From your frontend, generate tokens using that template.
 
 The following sections will dive into these steps and explore what you can achieve with JWT Templates.
@@ -58,11 +58,11 @@ A token generated using the template above, would look roughly like this:
 In the previous example, "automatically-included claims" was briefly mentioned. Besides the claims specified by the template, there are certain claims that are automatically included in all tokens and cannot be overridden by templates. Clerk calls these "default claims" and they are the following:
 
 * `azp`: authorized party - the `Origin` header that was included in the original Frontend API request made from the user. Most commonly, it will be the URL of the application (e.g. `https://example.com`). This claim could be omitted if, for privacy-related reasons, `Origin` is empty or null.
-* `exp`: expiration time - the time after which the token will expire, as a Unix timestamp. Determined using the **Token lifetime** template setting in the [Clerk Dashboard](https://dashboard.clerk.com/last-active?path=jwt-templates).
+* `exp`: expiration time - the time after which the token will expire, as a Unix timestamp. Determined using the **Token lifetime** JWT template setting in the [Clerk Dashboard](https://dashboard.clerk.com/last-active?path=jwt-templates).
 * `iat`: issued at - the time at which the token was issued, as a Unix timestamp (e.g. `1516239022`).
 * `iss`: issuer - the Frontend API URL of your instance (e.g. `https://clerk.your-site.com`).
 * `jti`: JWT ID - a random alphanumeric string, used as a unique identifier for the token.
-* `nbf`: not before - the time before which the token is considered invalid, as a Unix timestamp. Determined using the **Allowed Clock Skew** template setting in the [Clerk Dashboard](https://dashboard.clerk.com/last-active?path=jwt-templates).
+* `nbf`: not before - the time before which the token is considered invalid, as a Unix timestamp. Determined using the **Allowed Clock Skew** JWT template setting in the [Clerk Dashboard](https://dashboard.clerk.com/last-active?path=jwt-templates).
 * `sub`: subject - the ID of the current user of the session (e.g. `user_123`).
 
 <Images
@@ -245,7 +245,7 @@ A template consists of the following four properties:
 - Token allowed clock skew: the time in seconds, provided as a leeway to account for clock skews between different servers. This setting determines the value of the `nbf` claim (i.e. `nbf=current_time-allowed_clock_skew`). Default is 5 seconds.
 - Claims: the actual template that's entered into the JSON editor (see screenshot below). A template is essentially a JSON object that describes what the final token claims will look like (shortcodes can be used here). This is a required field.
 
-Templates can be created from the [JWT Templates](https://dashboard.clerk.com/last-active?path=jwt-templates) page in the Clerk Dashboard.
+Templates can be created from the Clerk Dashboard on the [JWT Templates](https://dashboard.clerk.com/last-active?path=jwt-templates) page.
 
 <Images
 width={3024}
