--- a/docs/deployments/changing-domains.mdx
+++ b/docs/deployments/changing-domains.mdx
@@ -19,7 +19,7 @@ Production domains can be changed in the [Clerk Dashboard](https://dashboard.cle
 
 ### Update your domain via Clerk Dashboard
 
-To update the production URL from the Clerk Dashboard, navigate to the **Danger** tab of the [Domains](https://dashboard.clerk.com/last-active?path=domains) page and select **Change domain**. 
+To update the production URL from the Clerk Dashboard, navigate to the **[Domains](https://dashboard.clerk.com/last-active?path=domains)** page and select the **Danger** tab. Select **Change domain**. 
 
 <Images
   width={3024}
@@ -39,7 +39,7 @@ You will receive a prompt to enter your new production domain.
 
 ### Update your domain via backend API
 
-To update the production URL using the backend API, you can copy the following cURL code. You will want to replace `YOUR_SECRET_KEY` with your Clerk secret key, which can be found on the [API Keys](https://dashboard.clerk.com/last-active?path=api-keys) page of the Clerk Dashboard. Then, make sure to update the `home_url` field with your new production URL.
+To update the production URL using the backend API, you can copy the following cURL code. You will want to replace `YOUR_SECRET_KEY` with your Clerk secret key, which can be found on the **[API Keys](https://dashboard.clerk.com/last-active?path=api-keys)** page of the Clerk Dashboard. Then, make sure to update the `home_url` field with your new production URL.
 
 ```bash
 curl -XPOST -H 'Authorization: <YOUR_SECRET_KEY>' -H "Content-type: application/json" -d '{
@@ -51,7 +51,7 @@ For more information on how to update your instance settings using the backend A
 
 ### Update your publishable key
 
-After changing your domain, a new **Publishable key** will be automatically generated for your application. You will need to update your environment variables with this new key and redeploy your application. You can find your **Publishable key** on the [API Keys](https://dashboard.clerk.com/last-active?path=api-keys) page of the Clerk Dashboard.
+After changing your domain, a new **Publishable key** will be automatically generated for your application. You will need to update your environment variables with this new key and redeploy your application. You can find your **Publishable key** on the **[API Keys](https://dashboard.clerk.com/last-active?path=api-keys)** page of the Clerk Dashboard.
 
 <Callout>
   Failing to update your **Publishable key** will result in Clerk failing to load. 
@@ -59,7 +59,7 @@ After changing your domain, a new **Publishable key** will be automatically gene
 
 ## Specify Subdomain
 
-If you would like to specify your subdomain of your application, you can do this from the **Danger** tab of the [Domains](https://dashboard.clerk.com/last-active?path=paths) page in the Clerk dashboard.
+If you would like to specify your subdomain of your application, go to the Clerk Dashboard and navigate to the **[Domains](https://dashboard.clerk.com/last-active?path=paths)** page. Select the **Danger** tab.
 
 <Images
   width={3024}
@@ -70,7 +70,7 @@ If you would like to specify your subdomain of your application, you can do this
 
 ## Change subdomain
 
-You can update your subdomain via the Clerk Dashboard. Navigate to the **Danger** tab of the [Domains](https://dashboard.clerk.com/last-active?path=domains) page and select **Change subdomain**. 
+You can update your subdomain via the Clerk Dashboard. Navigate to the **[Domains](https://dashboard.clerk.com/last-active?path=domains)** page and select the **Danger** tab. Select **Change subdomain**. 
 
 <Images
   width={3024}
