--- a/docs/integrations/databases/convex.mdx
+++ b/docs/integrations/databases/convex.mdx
@@ -5,7 +5,7 @@ description: Learn how to integrate Clerk into your Convex application.
 
 # Integrate Convex with Clerk
 
-Navigate to the [JWT Templates](https://dashboard.clerk.com/last-active?path=jwt-templates) screen from the Clerk Dashboard. Click on the **New template** button to create a new template based on Convex.
+In the Clerk Dashboard, navigate to the [JWT Templates](https://dashboard.clerk.com/last-active?path=jwt-templates)page. Select the **New template** button to create a new template based on Convex.
 
 <Images
   width={3024}
