--- a/docs/integrations/databases/fauna.mdx
+++ b/docs/integrations/databases/fauna.mdx
@@ -7,7 +7,7 @@ description: Learn how to integrate Clerk into your Fauna application.
 
 The first step is to create a new Clerk application from your Clerk Dashboard if you haven’t done so already. You can choose whichever authentication strategy and social login providers you prefer. For more information, check out our [Set up your application](/docs/quickstarts/setup-clerk) guide.
 
-After your Clerk application has been created, navigate to the [API keys](https://dashboard.clerk.com/last-active?path=api-keys) page in the Clerk Dashboard and copy your **Publishable key**.
+After your Clerk application has been created, in the Clerk Dashboard, navigate to the **[API keys](https://dashboard.clerk.com/last-active?path=api-keys)** page and copy your **Publishable key**.
 
 <Images
   width={3024}
@@ -37,7 +37,7 @@ Paste the **Publishable key** you copied from the Clerk Dashboard into the **Iss
 
 Assuming you didn’t use a custom signing key, set the **JWKS endpoint** field to the JSON Web Key Set (JWKS) URL Clerk automatically created with your Frontend API at `https://<YOUR_FRONTEND_API>/.well-known/jwks.json`
 
-You can find this URL in the [API keys](https://dashboard.clerk.com/last-active?path=api-keys) page in the Clerk Dashboard. Scroll down and click on **Advanced**. In the **JWT public key** section, copy the **JWKS URL**.
+You can find this URL in the Clerk Dashboard on the **[API keys](https://dashboard.clerk.com/last-active?path=api-keys)** page. Scroll down and click on **Advanced**. In the **JWT public key** section, copy the **JWKS URL**.
 
 <Images
   width={3024}
@@ -61,7 +61,7 @@ Before clicking the **Save** button, copy the **Audience URL** and then go ahead
 
 ## JWT Template
 
-Navigate to the [JWT Templates](https://dashboard.clerk.com/last-active?path=jwt-templates) screen from the Clerk Dashboard. Click on the **New template** button to create a new template based on Fauna.
+In the Clerk Dashboard, navigate to the **[JWT Templates](https://dashboard.clerk.com/last-active?path=jwt-templates)** page. Click on the **New template** button to create a new template based on Fauna.
 
 <Images
   width={3024}
