--- a/docs/integrations/databases/grafbase.mdx
+++ b/docs/integrations/databases/grafbase.mdx
@@ -7,7 +7,7 @@ description: Learn how to integrate Clerk and Grafbase into your application
 
 The first step is to create a new Clerk application from your Clerk Dashboard if you haven’t done so already. You can choose whichever authentication strategy and social login providers you prefer. For more information, check out our [Set up your application](/docs/quickstarts/setup-clerk) guide.
 
-After your Clerk application has been created, navigate to the [JWT Templates](https://dashboard.clerk.com/last-active?path=jwt-templates) screen from the Clerk Dashboard. Click on the **New template** button to create a new template based on Grafbase.
+After your Clerk application has been created, go to the Clerk Dashboard and navigate to the **[JWT Templates](https://dashboard.clerk.com/last-active?path=jwt-templates) page. Click on the **New template** button to create a new template based on Grafbase.
 
 <Images 
   width={3024}
@@ -63,7 +63,7 @@ schema
 }
 ```
 
-Make sure to set the environment variable `ISSUER_URL` (using the Grafbase CLI, or Clerk Dashboard) to be your Frontend API value found on the [API Keys](https://dashboard.clerk.com/last-active?path=api-keys) page in the Clerk Dashboard.
+Make sure to set the environment variable `ISSUER_URL` (using the Grafbase CLI, or Clerk Dashboard) to be your Frontend API value. This value can be found in the Clerk Dashboard on the **[API Keys](https://dashboard.clerk.com/last-active?path=api-keys)** page.
 
 ### Group-based authentication
 
@@ -79,9 +79,9 @@ schema
 }
 ```
 
-Make sure to replace `YOUR_FRONTEND_API` with the Frontend API value found on the [API Keys](https://dashboard.clerk.com/last-active?path=api-keys) page in the Clerk Dashboard.
+Make sure to replace `YOUR_FRONTEND_API` with the Frontend API value. This value can be found in the Clerk Dashboard on the **[API Keys](https://dashboard.clerk.com/last-active?path=api-keys)** page.
 
-If needed, you can also use a shortcode to dynamically include the users current organization's role. Shortcodes can be found and updated on your [JWT template](https://dashboard.clerk.com/last-active?path=jwt-templates) for Grafbase in the Clerk Dashboard.
+If needed, you can also use a shortcode to dynamically include the users current organization's role. Shortcodes can be found and updated on your **[JWT template](https://dashboard.clerk.com/last-active?path=jwt-templates)** for Grafbase in the Clerk Dashboard.
 
 ```json
 {
