--- a/docs/integrations/databases/hasura.mdx
+++ b/docs/integrations/databases/hasura.mdx
@@ -7,7 +7,7 @@ description: Learn how to integrate Clerk into your Hasura application.
 
 The first step is to create a new Clerk application from your Clerk Dashboard if you haven’t done so already. You can choose whichever authentication strategy and social login providers you prefer. For more information, check out our [Set up your application](/docs/quickstarts/setup-clerk) guide.
 
-After your Clerk application has been created, navigate to the [JWT Templates](https://dashboard.clerk.com/last-active?path=jwt-templates) screen from the Clerk Dashboard. Click on the **New template** button to create a new template based on Hasura.
+After your Clerk application has been created, go to the Clerk Dashboard and navigate to the **[JWT Templates](https://dashboard.clerk.com/last-active?path=jwt-templates)** page. Click on the **New template** button to create a new template based on Hasura.
 
 <Images 
   width={3024}
@@ -40,7 +40,7 @@ By default, Clerk will sign the JWT with a private key automatically generated f
 
 The next step is to provide Hasura with the public keys used to verify the JWT issued by Clerk. Assuming you didn’t use a custom signing key, set the **JWKS endpoint** field to the JSON Web Key Set (JWKS) URL Clerk automatically created with your Frontend API at `https://<YOUR_FRONTEND_API>/.well-known/jwks.json`
 
-You can find this URL in the [API keys](https://dashboard.clerk.com/last-active?path=api-keys) page in the Clerk Dashboard. Scroll down and click on **Advanced**. In the **JWT public key** section, copy the **JWKS URL**.
+You can find this URL in the Clerk Dashboard on the **[API keys](https://dashboard.clerk.com/last-active?path=api-keys)** page. Scroll down and click on **Advanced**. In the **JWT public key** section, copy the **JWKS URL**.
 
 <Images
   width={3024}
@@ -74,7 +74,7 @@ HASURA_GRAPHQL_ADMIN_SECRET: myadminsecretkey
 HASURA_GRAPHQL_JWT_SECRET: '{"jwk_url":"https://{{fapi}}/.well-known/jwks.json"}'
 ```
 
-Replace `<YOUR_FRONTEND_API>` with the Frontend API value found on the [API Keys](https://dashboard.clerk.com/last-active?path=api-keys) page in the Clerk Dashboard.
+Replace `<YOUR_FRONTEND_API>` with the Frontend API value. This value can be found in the Clerk Dashboard on the **[API Keys](https://dashboard.clerk.com/last-active?path=api-keys)** page.
 
 ### With Custom Signing Key
 
