--- a/docs/references/go/overview.mdx
+++ b/docs/references/go/overview.mdx
@@ -19,7 +19,7 @@ $ go get github.com/clerkinc/clerk-sdk-go
 
 ## `Clerk` client
 
-Now, you can create a `Clerk` client by calling the `clerk.NewClient` function. This function requires your Clerk secret key. If you are signed into your Clerk Dashboard, your keys should become visible by clicking on the eye icon. You can also retrieve your Clerk secret key from the [API Keys](https://dashboard.clerk.com/last-active?path=api-keys) page in the Clerk Dashboard.
+Now, you can create a `Clerk` client by calling the `clerk.NewClient` function. This function requires your Clerk secret key. If you are signed into your Clerk Dashboard, your keys should become visible by clicking on the eye icon. You can also retrieve your Clerk secret key from the Clerk Dashboard on the **[API Keys](https://dashboard.clerk.com/last-active?path=api-keys)** page.
 
 With your Clerk secret key, create a `Client` object to use the various services Clerk provides.
 
