--- a/docs/components/unstyled/sign-out-button.mdx
+++ b/docs/components/unstyled/sign-out-button.mdx
@@ -338,7 +338,7 @@ In the example below, the `signOut()` method is retrieved from the [`useAuth()`]
       import { SignOutButton, useClerk } from "@clerk/nextjs";
 
       export default function Home() {
-        const { signOut } = useClerk();
+        const { signOut } = useAuth();
 
         return (
           <div>
@@ -350,10 +350,10 @@ In the example below, the `signOut()` method is retrieved from the [`useAuth()`]
       ```
 
       ```tsx filename="pages/index.tsx"
-      import { SignOutButton, useClerk } from "@clerk/nextjs";
+      import { SignOutButton, useAuth } from "@clerk/nextjs";
 
       export default function Home() {
-        const { signOut } = useClerk();
+        const { signOut } = useAuth();
 
         return (
           <div>
@@ -368,10 +368,10 @@ In the example below, the `signOut()` method is retrieved from the [`useAuth()`]
 
   <Tab>
     ```jsx filename="example.js"
-    import { SignOutButton, useClerk } from "@clerk/clerk-react";
+    import { SignOutButton, useAuth } from "@clerk/clerk-react";
 
     export default function Home() {
-      const { signOut } = useClerk();
+      const { signOut } = useAuth();
 
       return (
         <div>
@@ -385,10 +385,10 @@ In the example below, the `signOut()` method is retrieved from the [`useAuth()`]
 
   <Tab>
     ```jsx filename="pages/index.js"
-    import { SignOutButton, useClerk } from "@clerk/remix";
+    import { SignOutButton, useAuth } from "@clerk/remix";
 
     export default function Home() {
-      const { signOut } = useClerk();
+      const { signOut } = useAuth();
 
       return (
         <div>
@@ -402,10 +402,10 @@ In the example below, the `signOut()` method is retrieved from the [`useAuth()`]
 
   <Tab>
     ```jsx filename="pages/index.js"
-    import { SignOutButton, useClerk } from "gatsby-plugin-clerk";
+    import { SignOutButton, useAuth } from "gatsby-plugin-clerk";
 
     export default function Home() {
-      const { signOut } = useClerk();
+      const { signOut } = useAuth();
 
       return (
         <div>
