fix: Update Clerk as OAuth IDP docs with /userinfo payload example

--- a/docs/advanced-usage/clerk-idp.mdx
+++ b/docs/advanced-usage/clerk-idp.mdx
@@ -78,4 +78,24 @@ Now that you have set up an OAuth application in Clerk, you will need to configu
 * **Token URL**: Used by the Client to retrieve access tokens
 * **Scopes**: OAuth scopes used to grant access to the Client. Clerk supports `profile`, `email`, `public_metadata`, and `private_metadata`. The metadata scopes ensure that the user info endpoint returns the user's public, private and unsafe metadata.
 * **User Info URL**: Used by the Client to retrieve the email address and profile (username, first and last name) associated to your user
+
+Below is an example of a response from `/oauth/userinfo`.
+
+```json filename="RESPONSE"
+{
+    "object": "oauth_user_info",
+    "instance_id": "ins_2O4Ak02T4fDmKKv6tK5h0WJ8ou8",
+    "email": "me@oauth-client.com",
+    "email_verified": true,
+    "family_name": "first_name",
+    "given_name": "last_name",
+    "name": "first_name last_name",
+    "username": "my_username",
+    "picture": "https://profile_image_public_url/img.png",
+    "user_id": "my_user_id",
+    "public_metadata": {},
+    "private_metadata": {},
+    "unsafe_metadata": {}
+}
+```
 </Steps>
